--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
-sudo: false
+warnings_are_errors: true
+sudo: true
 cache: packages
 
 r_github_packages:
   - r-lib/covr
-  - cran/foreign
-  - cran/car
-  - cran/MASS
-  - cran/mgcv
-  - cran/nnet
-  - cran/pbkrtest
-  - cran/quantreg
-  - cran/grDevices
-  - cran/utils
-  - cran/stats
-  - cran/graphics
-
-before_install:
-  - Rscript -e 'update.packages(ask = FALSE)'
 
 after_success:
   - Rscript -e 'covr::codecov()'
