--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
+
+os:
+- linux
+- osx
+
+r:
+- release
+- oldrelease
+- devel
+
 warnings_are_errors: true
 sudo: true
 cache: packages
