--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(bootClassic)
 export(bootPROBIT)
 export(fullTable)
 export(pyramid.plot)
-export(recode)
+export(recoder)
 importFrom(car,bcPower)
 importFrom(car,powerTransform)
 importFrom(graphics,axTicks)
