add remotes to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ Description: An implementaiton of the Rapid Assessment Method for Older People
 Imports:
     foreign,
     car
+Remotes: lme4/lme4
 Depends: R (>= 3.4.3)
-License: AGPL-3 + file LICENSE
+License: AGPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
