--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ cache: packages
 addons:
    apt:
      packages:
+       - libgsl0-dev # for topicmodels
        - libxml2-dev # for XML, a dependency of quantreg
 
 r_github_packages:
