add rmarkdown and testtha as dependencies in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ RoxygenNote: 6.0.1
 URL: http://www.helpage.org/what-we-do/emergencies/ramop-rapid-assessment-method-for-older-people/
 BugReports: https://github.com/validmeasures/ramop/issues
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
