--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Description: An implementaiton of the Rapid Assessment Method for Older People
     The method uses simple procedures, in a short time frame (i.e. about two 
     weeks including training, data collection, data entry, and data analysis), 
     and at considerably lower cost than other methods.
-Imports: car
+Imports: car,
+    bwb
 Depends: R (>= 3.0.1)
 License: AGPL-3
 Encoding: UTF-8
