--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,8 @@ License: AGPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-URL: http://www.helpage.org/what-we-do/emergencies/ramop-rapid-assessment-method-for-older-people/
-BugReports: https://github.com/validmeasures/ramop/issues
+URL: http://www.helpage.org/what-we-do/emergencies/ramop-rapid-assessment-method-for-older-people/,https://github.com/validmeasures/oldr/issues
+BugReports: https://github.com/validmeasures/oldr/issues
 Suggests: knitr,
     rmarkdown,
     testthat
