--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: oldr
 Title: An Implementation of Rapid Assessment Method for Older People in R
 Version: 0.0.0.9000
-Authors@R: as.person(
-    c("Pascale Fritsh [aut]",
-      "Katja Siling [aut]",
-      "Ernest Guevarra <ernestgmd@gmail.com> [aut, cre]",
-      "Mark Myatt [aut]")
-      )
+Authors@R: c(
+    person("Pascale", "Fritsch", role = "aut"),
+    person("Katja", "Silin", role = "aut"),
+    person("Mark", "Myatt", email = "mark@brixtonhealth.com", role = "aut"),
+    person("Ernest", "Guevarra", comment = c(ORCID = "0000-0002-4887-4415"), 
+                  email = "ernest@guevarra.io", role = c("aut", "cre")))
 Description: An implementaiton of the Rapid Assessment Method for Older People
     (RAM-OP). RAM-OP was developed by HelpAge International, Valid International, 
     and Brixton Health, with financial assistance from the Humanitarian 
