--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,15 +16,15 @@ Description: An implementaiton of the Rapid Assessment Method for Older People
     The method uses simple procedures, in a short time frame (i.e. about two 
     weeks including training, data collection, data entry, and data analysis), 
     and at considerably lower cost than other methods.
-Imports: bbw
-Depends: R (>= 3.0.1)
 License: AGPL-3
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 6.0.1
-URL: http://www.helpage.org/what-we-do/emergencies/ramop-rapid-assessment-method-for-older-people/,https://github.com/validmeasures/oldr/issues
-BugReports: https://github.com/validmeasures/oldr/issues
+Depends: R (>= 3.0.1)
+Imports: bbw
 Suggests: knitr,
     rmarkdown,
     testthat
+Encoding: UTF-8
+LazyData: true
+RoxygenNote: 6.1.1
+URL: https://github.com/validmeasures/oldr/issues
+BugReports: https://github.com/validmeasures/oldr/issues
 VignetteBuilder: knitr
