--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(chartMUAC)
 export(chartWASH)
 export(chartWG)
 export(createOP)
+export(create_op_demo_all)
+export(create_op_demo_females)
+export(create_op_demo_males)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
