--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,9 +12,13 @@ export(chartMUAC)
 export(chartWASH)
 export(chartWG)
 export(createOP)
-export(create_op_demo_all)
+export(create_op_demo)
 export(create_op_demo_females)
 export(create_op_demo_males)
+export(create_op_food)
+export(create_op_food_females)
+export(create_op_food_males)
+export(create_op_hunger)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
