--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(create_op_food)
 export(create_op_food_females)
 export(create_op_food_males)
 export(create_op_hunger)
+export(create_op_hunger_females)
+export(create_op_hunger_males)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
