--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(chartMUAC)
 export(chartWASH)
 export(chartWG)
 export(createOP)
+export(create_op_adl)
+export(create_op_adl_females)
+export(create_op_adl_males)
 export(create_op_demo)
 export(create_op_demo_females)
 export(create_op_demo_males)
