--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,12 +18,16 @@ export(create_op_adl_males)
 export(create_op_demo)
 export(create_op_demo_females)
 export(create_op_demo_males)
+export(create_op_disability)
+export(create_op_disability_females)
+export(create_op_disability_males)
 export(create_op_food)
 export(create_op_food_females)
 export(create_op_food_males)
 export(create_op_hunger)
 export(create_op_hunger_females)
 export(create_op_hunger_males)
+export(create_op_mental)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
