--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(create_op_hunger)
 export(create_op_hunger_females)
 export(create_op_hunger_males)
 export(create_op_mental)
+export(create_op_mental_females)
+export(create_op_mental_males)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
