--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,9 @@ export(create_op_disability_males)
 export(create_op_food)
 export(create_op_food_females)
 export(create_op_food_males)
+export(create_op_health)
+export(create_op_health_females)
+export(create_op_health_males)
 export(create_op_hunger)
 export(create_op_hunger_females)
 export(create_op_hunger_males)
