--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,9 @@ export(create_op_health_males)
 export(create_op_hunger)
 export(create_op_hunger_females)
 export(create_op_hunger_males)
+export(create_op_income)
+export(create_op_income_females)
+export(create_op_income_males)
 export(create_op_mental)
 export(create_op_mental_females)
 export(create_op_mental_males)
