--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,9 @@ export(create_op_income_males)
 export(create_op_mental)
 export(create_op_mental_females)
 export(create_op_mental_males)
+export(create_op_wash)
+export(create_op_wash_females)
+export(create_op_wash_males)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
