--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(createOP)
 export(create_op_adl)
 export(create_op_adl_females)
 export(create_op_adl_males)
+export(create_op_anthro)
+export(create_op_anthro_females)
+export(create_op_anthro_males)
 export(create_op_dementia)
 export(create_op_dementia_females)
 export(create_op_dementia_males)
