--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,9 @@ export(create_op_income_males)
 export(create_op_mental)
 export(create_op_mental_females)
 export(create_op_mental_males)
+export(create_op_misc)
+export(create_op_misc_females)
+export(create_op_misc_males)
 export(create_op_visual)
 export(create_op_visual_females)
 export(create_op_visual_males)
