--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(createOP)
 export(create_op_adl)
 export(create_op_adl_females)
 export(create_op_adl_males)
+export(create_op_all)
 export(create_op_anthro)
 export(create_op_anthro_females)
 export(create_op_anthro_males)
