--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(create_op_wash_males)
 export(estimateClassic)
 export(estimateProbit)
 export(fullTable)
+export(get_variables)
 export(mergeEstimates)
 export(pyramid.plot)
 export(reportOP)
