--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Description: An implementaiton of the Rapid Assessment Method for Older People
     and at considerably lower cost than other methods.
 License: AGPL-3
 Depends: R (>= 3.0.1)
-Imports: bbw
+Imports: bbw,
+    car
 Suggests: knitr,
     rmarkdown,
     testthat
