--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,11 +57,15 @@ export(estimateProbit)
 export(fullTable)
 export(get_variables)
 export(mergeEstimates)
+export(probit_gam)
+export(probit_sam)
 export(pyramid.plot)
 export(reportOP)
 importFrom(bbw,bootBW)
 importFrom(bbw,bootClassic)
 importFrom(bbw,bootPROBIT)
+importFrom(car,bcPower)
+importFrom(car,powerTransform)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(graphics,axTicks)
