--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,12 @@ export(create_op_mental_males)
 export(create_op_misc)
 export(create_op_misc_females)
 export(create_op_misc_males)
+export(create_op_oedema)
+export(create_op_oedema_females)
+export(create_op_oedema_males)
+export(create_op_screening)
+export(create_op_screening_females)
+export(create_op_screening_males)
 export(create_op_visual)
 export(create_op_visual_females)
 export(create_op_visual_males)
