--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
 pandoc: 2.0.4
-pkgdown: 1.2.0
+pkgdown: 1.3.0
 pkgdown_sha: ~
-articles: []
+articles:
+  oldr: oldr.html
 urls:
   reference: https://ram.validmeasures.org/oldr/reference
   article: https://ram.validmeasures.org/oldr/articles
