--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,8 @@ warnings_are_errors: true
 sudo: false
 cache: packages
 
-#addons:
-#   apt:
-#     packages:
-#       - libgsl0-dev # for topicmodels
-#       - libxml2-dev # for XML, a dependency of quantreg
-
-r_github_packages:
-  - r-lib/covr
+#r_github_packages:
+#  - r-lib/covr
 
 after_success:
   - Rscript -e 'covr::codecov()'
