--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,5 +1,5 @@
 title: oldr
-url: https://ram.validmeasures.org/oldr
+url: https://rapidsurveys.io/oldr
 template:
   params:
     bootswatch: sandstone
