--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 2.3.1
 pkgdown: 1.5.0
 pkgdown_sha: ~
-articles: []
-last_built: 2020-04-09T12:59Z
+articles:
+  oldr: oldr.html
+last_built: 2020-04-09T14:52Z
 urls:
   reference: https://rapidsurveys.io/oldr/reference
   article: https://rapidsurveys.io/oldr/articles
