--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,8 @@
 pandoc: 2.3.1
 pkgdown: 1.5.0
 pkgdown_sha: ~
-articles:
-  oldr: oldr.html
-last_built: 2020-04-09T14:52Z
+articles: []
+last_built: 2020-04-09T18:05Z
 urls:
   reference: https://rapidsurveys.io/oldr/reference
   article: https://rapidsurveys.io/oldr/articles
