--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ Description: An implementaiton of the Rapid Assessment Method for Older People
     The method uses simple procedures, in a short time frame (i.e. about two 
     weeks including training, data collection, data entry, and data analysis), 
     and at considerably lower cost than other methods.
-License: AGPL-3
+License: GPL-3
 Depends: R (>= 3.0.1)
 Imports: 
     bbw,
@@ -28,7 +28,7 @@ Suggests:
     testthat
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 URL: https://github.com/rapidsurveys/oldr/issues
 BugReports: https://github.com/rapidsurveys/oldr/issues
 VignetteBuilder: knitr
