--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: 2.3.1
-pkgdown: 1.5.0
+pandoc: 2.7.3
+pkgdown: 1.5.1
 pkgdown_sha: ~
-articles: []
-last_built: 2020-04-09T18:05Z
+articles:
+  oldr: oldr.html
+last_built: 2020-07-15T04:49Z
 urls:
   reference: https://rapidsurveys.io/oldr/reference
   article: https://rapidsurveys.io/oldr/articles
