--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,3 +85,6 @@ importFrom(stats,pnorm)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(withr,with_options)
+importFrom(withr,with_output_sink)
+importFrom(withr,with_par)
