--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,6 @@ Depends: R (>= 3.0.1)
 Imports: 
     bbw,
     car,
-    shiny,
     withr
 Suggests: 
     knitr,
@@ -29,6 +28,7 @@ Suggests:
     testthat
 Encoding: UTF-8
 LazyData: true
+Language: en-gb
 RoxygenNote: 7.1.1
 URL: https://github.com/rapidsurveys/oldr/issues
 BugReports: https://github.com/rapidsurveys/oldr/issues
