--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Suggests:
     knitr,
     rmarkdown,
     testthat,
-    covr
+    covr,
+    DiagrammeR,
+    dplyr
 Encoding: UTF-8
 LazyData: true
 Language: en-gb
