--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(chartMF)
 export(chartMUAC)
 export(chartWASH)
 export(chartWG)
-export(createOP)
 export(create_op_adl)
 export(create_op_adl_females)
 export(create_op_adl_males)
@@ -85,6 +84,7 @@ importFrom(stats,pnorm)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(tibble,tibble)
 importFrom(withr,with_options)
 importFrom(withr,with_output_sink)
 importFrom(withr,with_par)
