--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,8 @@ pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   oldr: oldr.html
-last_built: 2020-07-16T09:29Z
+  ramOPworkflow: ramOPworkflow.html
+last_built: 2020-07-18T07:20Z
 urls:
   reference: https://rapidsurveys.io/oldr/reference
   article: https://rapidsurveys.io/oldr/articles
