--- a/inst/_pkgdown.yml
+++ b/inst/_pkgdown.yml
@@ -35,53 +35,22 @@ reference:
 
   - title: Create RAM-OP indicators
     contents:
-    - createOP
     - create_op_all
-    - create_op_adl
-    - create_op_adl_males
-    - create_op_adl_females
-    - create_op_anthro
-    - create_op_anthro_males
-    - create_op_anthro_females
-    - create_op_dementia
-    - create_op_dementia_males
-    - create_op_dementia_females
-    - create_op_demo
-    - create_op_demo_males
-    - create_op_demo_females
-    - create_op_disability
-    - create_op_disability_males
-    - create_op_disability_females
-    - create_op_food
-    - create_op_food_males
-    - create_op_food_females
-    - create_op_health
-    - create_op_health_males
-    - create_op_health_females
-    - create_op_hunger
-    - create_op_hunger_males
-    - create_op_hunger_females
-    - create_op_income
-    - create_op_income_males
-    - create_op_income_females
-    - create_op_mental
-    - create_op_mental_males
-    - create_op_mental_females
-    - create_op_oedema
-    - create_op_oedema_males
-    - create_op_oedema_females
-    - create_op_screening
-    - create_op_screening_males
-    - create_op_screening_females
-    - create_op_visual
-    - create_op_visual_males
-    - create_op_visual_females
-    - create_op_wash
-    - create_op_wash_males
-    - create_op_wash_females
-    - create_op_misc
-    - create_op_misc_males
-    - create_op_misc_females
+    - matches("adl")
+    - matches("anthro")
+    - matches("dementia")
+    - matches("demo")
+    - matches("disability")
+    - matches("food")
+    - matches("health")
+    - matches("hunger")
+    - matches("income")
+    - matches("mental")
+    - matches("oedema")
+    - matches("screening")
+    - matches("visual")
+    - matches("wash")
+    - matches("misc")
 
   - title: Create charts
     contents:
