--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,7 @@ export(mergeEstimates)
 export(probit_gam)
 export(probit_sam)
 export(pyramid.plot)
-export(reportOP)
+export(report_op_table)
 importFrom(bbw,bootBW)
 importFrom(bbw,bootClassic)
 importFrom(bbw,bootPROBIT)
