--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(create_op_wash_females)
 export(create_op_wash_males)
 export(estimateClassic)
 export(estimateProbit)
+export(estimate_op_all)
 export(fullTable)
 export(get_variables)
 export(mergeEstimates)
