--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,12 +57,12 @@ export(create_op_visual_males)
 export(create_op_wash)
 export(create_op_wash_females)
 export(create_op_wash_males)
-export(estimateClassic)
-export(estimateProbit)
+export(estimate_classic)
 export(estimate_op_all)
+export(estimate_probit)
 export(fullTable)
 export(get_variables)
-export(mergeEstimates)
+export(merge_estimates)
 export(probit_gam)
 export(probit_sam)
 export(pyramid.plot)
