--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,7 +66,7 @@ export(merge_estimates)
 export(probit_gam)
 export(probit_sam)
 export(pyramid.plot)
-export(report_op_document)
+export(report_op_html)
 export(report_op_table)
 importFrom(bbw,bootBW)
 importFrom(bbw,bootClassic)
@@ -81,12 +81,14 @@ importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
 importFrom(graphics,hist)
 importFrom(graphics,par)
+importFrom(rmarkdown,render)
 importFrom(stats,na.omit)
 importFrom(stats,pnorm)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
+importFrom(utils,browseURL)
 importFrom(withr,with_options)
 importFrom(withr,with_output_sink)
 importFrom(withr,with_par)
