--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(merge_estimates)
 export(probit_gam)
 export(probit_sam)
 export(pyramid.plot)
+export(report_op_demo)
 export(report_op_html)
 export(report_op_table)
 importFrom(bbw,bootBW)
