--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,8 +66,12 @@ export(merge_estimates)
 export(probit_gam)
 export(probit_sam)
 export(pyramid.plot)
+export(report_op_adl)
 export(report_op_demo)
+export(report_op_disability)
+export(report_op_food)
 export(report_op_html)
+export(report_op_hunger)
 export(report_op_table)
 importFrom(bbw,bootBW)
 importFrom(bbw,bootClassic)
