--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,12 +67,22 @@ export(probit_gam)
 export(probit_sam)
 export(pyramid.plot)
 export(report_op_adl)
+export(report_op_anthro)
+export(report_op_dementia)
 export(report_op_demo)
 export(report_op_disability)
 export(report_op_food)
+export(report_op_health)
 export(report_op_html)
 export(report_op_hunger)
+export(report_op_income)
+export(report_op_mental)
+export(report_op_misc)
+export(report_op_oedema)
+export(report_op_screen)
 export(report_op_table)
+export(report_op_visual)
+export(report_op_wash)
 importFrom(bbw,bootBW)
 importFrom(bbw,bootClassic)
 importFrom(bbw,bootPROBIT)
