--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(report_op_income)
 export(report_op_mental)
 export(report_op_misc)
 export(report_op_oedema)
+export(report_op_pdf)
 export(report_op_screen)
 export(report_op_table)
 export(report_op_visual)
