--- a/NAMESPACE
+++ b/NAMESPACE
@@ -97,6 +97,9 @@ importFrom(graphics,barplot)
 importFrom(graphics,boxplot)
 importFrom(graphics,hist)
 importFrom(graphics,par)
+importFrom(kableExtra,add_header_above)
+importFrom(kableExtra,kable_styling)
+importFrom(knitr,kable)
 importFrom(rmarkdown,render)
 importFrom(stats,na.omit)
 importFrom(stats,pnorm)
