--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,14 @@ language: r
 warnings_are_errors: true
 cache: packages
 
-addons:
-   apt:
-     packages:
-       - ghostscript
+before_install:
+  - Rscript -e 'tinytex::install_tinytex()'
+
+#addons:
+#   apt:
+#     packages:
+#       - ghostscript
+
 
 after_success:
   - Rscript -e 'covr::codecov()'
