change to before_script rather than before_install for installing tinytex

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: r
 warnings_are_errors: true
 cache: packages
 
-before_install:
+before_script:
   - Rscript -e 'tinytex::install_tinytex()'
 
 #addons:
