--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache: packages
 
 before_script:
   - Rscript -e 'tinytex::install_tinytex()'
-  - Rscript -e 'tinytex::tlmgr_install(pkgs = c("booktabs", "longtable", "array", "multirow", "wrapfig", "float", "colortbl", "pdflscape", "tabu", "threeparttable", "threeparttablex", "makecell", "graphicx")'
+  - Rscript -e 'tinytex::tlmgr_install(pkgs = c("booktabs", "longtable", "array", "multirow", "wrapfig", "float", "colortbl", "pdflscape", "tabu", "threeparttable", "threeparttablex", "makecell", "graphicx"))'
 
 after_success:
   - Rscript -e 'covr::codecov()'
