--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(tibble,tibble)
+importFrom(tinytex,install_tinytex)
 importFrom(utils,browseURL)
 importFrom(withr,with_options)
 importFrom(withr,with_output_sink)
