--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ language: r
 warnings_are_errors: true
 cache: packages
 
-#script:
-#  - Rscript -e 'tinytex::install_tinytex()'
+script:
+  - Rscript -e 'tinytex::install_tinytex()'
 
 after_success:
   - Rscript -e 'covr::codecov()'
