--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(report_op_anthro)
 export(report_op_dementia)
 export(report_op_demo)
 export(report_op_disability)
+export(report_op_docx)
 export(report_op_food)
 export(report_op_health)
 export(report_op_html)
@@ -78,8 +79,8 @@ export(report_op_hunger)
 export(report_op_income)
 export(report_op_mental)
 export(report_op_misc)
+export(report_op_odt)
 export(report_op_oedema)
-export(report_op_pdf)
 export(report_op_screen)
 export(report_op_table)
 export(report_op_visual)
