--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: oldr
 Title: An Implementation of Rapid Assessment Method for Older People
-Version: 0.1.0
+Version: 0.1.0.9000
 Authors@R: c(
     person("Mark", "Myatt", comment = c(ORCID = "0000-0003-1119-1474"),
            email = "mark@brixtonhealth.com", role = "aut"),
@@ -37,7 +37,7 @@ Encoding: UTF-8
 LazyData: true
 Language: en-GB
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 VignetteBuilder: knitr
-URL: https://github.com/rapidsurveys/oldr
+URL: https://rapidsurveys.io/oldr/, https://github.com/rapidsurveys/oldr
 BugReports: https://github.com/rapidsurveys/oldr/issues
