--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -7,16 +7,18 @@ development:
 
 template:
   bootstrap: 5
-  bootswatch: united
-  theme: haddock
-  ganalytics: UA-155093086-2
+  theme: breeze-light
+  ganalytics: "G-0QDF0E2HPX"
+  bslib:
+    bootswatch: sandstone
+    primary: "#A41034"
 
 navbar:
-  bg: danger
+  bg: primary
   type: light
   structure:
     left:  [home, intro, reference, articles, news]
-    right: [mastodon, linkedin, github]
+    right: [search, mastodon, linkedin, github]
   components:
     articles:
       text: Articles
@@ -25,13 +27,12 @@ navbar:
         href: articles/ram_op_workflow.html
     mastodon:
       icon: "fab fa-mastodon fa-lg"
+      aria-label: Mastodon
       href: https://fosstodon.org/@katilingban
     linkedin:
       icon: "fab fa-linkedin fa-lg"
+      aria-label: LinkedIn
       href: https://www.linkedin.com/company/katilingban
-    github:
-      icon: "fab fa-github fa-lg"
-      href: https://github.com/katilingban
 
 home:
   links:
@@ -43,9 +44,6 @@ home:
 
   - text: Read the online RAM-OP manual
     href: https://rapidsurveys.io/ramOPmanual/
-
-  - text: Learn more about RapidSurveys
-    href: https://rapidsurveys.io/
 
 reference:
   - title: Create indicators
