tidy up documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,7 @@ export(create_op_screening)
 export(create_op_visual)
 export(create_op_wash)
 export(estimate_classic)
-export(estimate_op_all)
+export(estimate_op)
 export(estimate_probit)
 export(merge_estimates)
 export(probit_gam)
