--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(create_op_wash)
 export(estimate_classic)
 export(estimate_op)
 export(estimate_probit)
-export(merge_estimates)
+export(merge_op)
 export(probit_gam)
 export(probit_sam)
 export(pyramid_plot)
@@ -49,6 +49,7 @@ export(report_op_mental)
 export(report_op_misc)
 export(report_op_odt)
 export(report_op_oedema)
+export(report_op_pdf)
 export(report_op_screen)
 export(report_op_table)
 export(report_op_visual)
@@ -74,6 +75,7 @@ importFrom(stats,pnorm)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,browseURL)
 importFrom(withr,with_options)
