add tinytex dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,8 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tinytex,install_tinytex)
+importFrom(tinytex,is_tinytex)
 importFrom(utils,browseURL)
 importFrom(withr,with_options)
 importFrom(withr,with_output_sink)
