--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -27,6 +27,11 @@ jobs:
           extra-packages: any::covr, any::xml2
           needs: coverage
 
+      - uses: r-lib/actions/setup-tinytex@v2
+        env:
+          # install full prebuilt version
+          TINYTEX_INSTALLER: TinyTeX
+
       - name: Test coverage
         run: |
           cov <- covr::package_coverage(
